--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,8 @@ img {
   justify-content: center;
   align-items: center;
   letter-spacing: 0.04em;
+  font-weight: 500;
+  line-height: 1.5;
   color: #ffffff;
   cursor: pointer;
   background-color: #4d5ae5;
