--- a/css/style.css
+++ b/css/style.css
@@ -523,3 +523,170 @@ img {
   margin-left: 16px;
   fill: #ffffff;
 }
+/* overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms linear, visibility 250ms linear;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: 1000;
+}
+
+.overlay.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.overlay-window {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 300px;
+  max-width: 408px;
+  width: 90%;
+  background: #fcfcfc;
+  padding: 72px 24px 24px 24px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.overlay-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms linear, border 250ms linear;
+}
+
+.overlay-close-btn:hover,
+.overlay-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.overlay-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms linear;
+}
+
+.overlay-close-btn:hover .overlay-close-icon,
+.overlay-close-btn:focus .overlay-close-icon {
+  fill: #ffffff;
+}
+
+.overlay-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
+
+.overlay-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.input-wrapper {
+  margin-bottom: 8px;
+}
+
+.overlay-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.input-container {
+  position: relative;
+}
+
+.overlay-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  font-size: 14px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  transition: border-color 250ms linear;
+}
+
+.overlay-input:focus {
+  outline: none;
+  border-color: #4d5ae5;
+}
+
+.overlay-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms linear;
+}
+
+.overlay-input:focus + .overlay-icon {
+  fill: #4d5ae5;
+}
+
+.overlay-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 14px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  resize: none;
+  transition: border-color 250ms linear;
+}
+
+.overlay-textarea:focus {
+  outline: none;
+  border-color: #4d5ae5;
+}
+
+.overlay-submit-btn {
+  display: block;
+  margin: 24px auto 0 auto;
+  padding: 12px 24px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.overlay-submit-btn:hover,
+.overlay-submit-btn:focus {
+  background-color: #404bbf;
+}
