--- a/css/style.css
+++ b/css/style.css
@@ -531,17 +531,14 @@ img {
   width: 100vw;
   height: 100vh;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms linear, visibility 250ms linear;
-  opacity: 0;
+  /* opacity: 0;
   visibility: hidden;
-  pointer-events: none;
-  z-index: 1000;
-}
-
-.overlay.is-open {
+  pointer-events: none; */
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  transition: opacity 250ms linear, visibility 250ms linear;
+  z-index: 1000;
 }
 
 .overlay-window {
@@ -552,8 +549,9 @@ img {
   min-width: 300px;
   max-width: 408px;
   width: 90%;
+  min-height: 584px;
   background: #fcfcfc;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 24px 24px;
   border-radius: 4px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
@@ -572,19 +570,18 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  cursor: pointer;
-  transition: background-color 250ms linear, border 250ms linear;
+  transition: background-color 250ms, border 250ms;
+}
+
+.overlay-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms;
 }
 
 .overlay-close-btn:hover,
 .overlay-close-btn:focus {
   background-color: #404bbf;
   border: none;
-}
-
-.overlay-close-icon {
-  fill: #2e2f42;
-  transition: fill 250ms linear;
 }
 
 .overlay-close-btn:hover .overlay-close-icon,
@@ -612,6 +609,10 @@ img {
   margin-bottom: 8px;
 }
 
+.checkbox-wrapper {
+  margin-bottom: 24px;
+}
+
 .overlay-label {
   display: block;
   margin-bottom: 4px;
@@ -633,7 +634,7 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
-  transition: border-color 250ms linear;
+  transition: border-color 250ms;
 }
 
 .overlay-input:focus {
@@ -647,7 +648,7 @@ img {
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
-  transition: fill 250ms linear;
+  transition: fill 250ms;
 }
 
 .overlay-input:focus + .overlay-icon {
@@ -658,32 +659,69 @@ img {
   width: 100%;
   height: 120px;
   font-size: 14px;
-  padding: 8px 16px;
-  border-radius: 4px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
   background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
   resize: none;
-  transition: border-color 250ms linear;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-textarea:focus {
-  outline: none;
   border-color: #4d5ae5;
+}
+
+.visually-hidden {
+  position: absolute;
+  opacity: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.custom-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  margin-right: 8px;
+  transition: background-color 250ms, border 250ms, fill 250ms;
+}
+
+input[type='checkbox']:checked + label .custom-checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+  text-decoration: underline;
 }
 
 .overlay-submit-btn {
   display: block;
   margin: 24px auto 0 auto;
-  padding: 12px 24px;
-  font-weight: 500;
+  min-width: 169px;
+  height: 56px;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
-  border-radius: 4px;
-  background-color: #4d5ae5;
+  letter-spacing: 0.04em;
   color: #ffffff;
+  background-color: #4d5ae5;
   border: none;
   cursor: pointer;
-  transition: background-color 250ms linear;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-submit-btn:hover,
