--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,8 @@ img {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  transition: opacity 250ms linear, visibility 250ms linear;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 1000;
 }
 
@@ -553,6 +554,7 @@ img {
   background: #fcfcfc;
   padding: 72px 24px 24px;
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 }
@@ -570,12 +572,14 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  transition: background-color 250ms, border 250ms;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-close-icon {
   fill: #2e2f42;
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-close-btn:hover,
@@ -606,7 +610,7 @@ img {
 }
 
 .input-wrapper {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .checkbox-wrapper {
@@ -633,8 +637,8 @@ img {
   font-size: 14px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  background-color: transparent;
-  transition: border-color 250ms;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-input:focus {
@@ -648,7 +652,7 @@ img {
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
-  transition: fill 250ms;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-input:focus + .overlay-icon {
@@ -658,7 +662,7 @@ img {
 .overlay-textarea {
   width: 100%;
   height: 120px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
@@ -693,7 +697,9 @@ img {
   justify-content: center;
   fill: transparent;
   margin-right: 8px;
-  transition: background-color 250ms, border 250ms, fill 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type='checkbox']:checked + label .custom-checkbox {
@@ -712,7 +718,6 @@ input[type='checkbox']:checked + label .custom-checkbox {
   margin: 24px auto 0 auto;
   min-width: 169px;
   height: 56px;
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -721,6 +726,7 @@ input[type='checkbox']:checked + label .custom-checkbox {
   background-color: #4d5ae5;
   border: none;
   cursor: pointer;
+  border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
