--- a/css/style.css
+++ b/css/style.css
@@ -704,13 +704,11 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-input[type='checkbox']:checked + label .custom-checkbox {
+.checkbox-label input:checked ~ .custom-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
-
 .privacy-link {
   color: #4d5ae5;
   text-decoration: underline;
